@@ -27,14 +27,13 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifestEntries>
-                            <Automatic-Module-Name>com.mikemybytes.junit5.formatted</Automatic-Module-Name>
-                        </manifestEntries>
-                    </archive>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <!-- give up on unit testing using module path (IDE <> mvn compatibility...) -->
+                <configuration combine.self="append">
+                    <argLine>
+                        --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
+                        --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
